# day-captain

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml  morning-digest-scheduler.yml  weekly-digest-scheduler.yml
changelogs/: CHANGELOGS_1_10_0.md  CHANGELOGS_1_11_0.md  CHANGELOGS_1_12_0.md  CHANGELOGS_1_5_0.md  CHANGELOGS_1_5_1.md  CHANGELOGS_1_7_0.md  CHANGELOGS_1_8_0.md  CHANGELOGS_1_9_0.md  CHANGELOGS_1_9_1.md  CHANGELOGS_1_9_2.md  CHANGELOGS_1_9_3.md  CHANGELOGS_1_9_4.md  CHANGELOGS_1_9_5.md  README.md
docs/: day_captain_ops_morning_digest_scheduler.yml  day_captain_ops_weekly_digest_scheduler.yml  digest_rendering_validation.md  hosted_deployment_checklist.md  power_automate_scheduler_setup.md  power_automate_shared_mailbox_recall_setup.md  private_ops_repo_bootstrap.md  security_publication_checklist.md  tenant_scoped_multi_user_operator_guide.md
logics/: INDEX.md
logics/backlog/: item_000_day_captain_daily_assistant_for_microsoft_365.md  item_001_day_captain_hosted_security_hardening.md  item_002_day_captain_llm_digest_wording_for_shortlisted_items.md  (+121 more)
scripts/: check_hosted_health.py  check_public_exposure.sh  generate_changelog.py  trigger_hosted_digest.py  validate_hosted_service.py
tests/: test_app.py  test_auth.py  test_changelog.py  test_cli.py  test_delivery_audit.py  test_delivery_contract.py  test_digest_memory.py  test_digest_metrics.py  test_digest_renderer.py  test_feedback.py  test_graph_client.py  test_hosted_jobs.py  test_llm.py  test_morning_run.py  test_news.py  test_recall.py  test_replay.py  test_scheduler.py  test_scheduler_templates.py  test_scoring.py  test_services_size.py  test_settings.py  test_storage.py  test_weather.py  test_web.py
(+151 files in other folders)
