[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "day-captain"
version = "1.9.2"
description = "Day Captain daily assistant service skeleton"
requires-python = ">=3.9"
dependencies = ["gunicorn>=21,<24", "psycopg[binary]>=3.1,<4"]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
day-captain = "day_captain.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
