[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "day-captain"
version = "1.10.0"
description = "Day Captain daily assistant service skeleton"
requires-python = ">=3.11"
dependencies = ["gunicorn>=21,<24", "psycopg[binary]>=3.1,<4", "psycopg-pool>=3.2,<4"]

[project.optional-dependencies]
dev = ["coverage>=7,<8", "pytest>=8,<9"]

[tool.coverage.run]
branch = true
source = ["day_captain"]

[tool.coverage.report]
fail_under = 79
show_missing = true

[project.scripts]
day-captain = "day_captain.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
